--- a/app/views/Users/login.scala.html
+++ b/app/views/Users/login.scala.html
@@ -5,15 +5,23 @@
     @styles = {
         <link href="@routes.Assets.versioned("/stylesheets/login.css")" rel="stylesheet" />
     }
-    @head(messages("users.login.title"), styles)
+    @head(title = messages("users.login.title"), otherStyles = styles)
     <body class="text-center">
         @helper.form(action = routes.UsersController.postLogin(), 'class -> "form-signin") {
             @helper.CSRF.formField
+
+
             <img class="mb-4" src="@routes.Assets.versioned("/images/logo.png")" alt="" width="150" height="125">
             <h1 class="h3 mb-3 font-weight-normal">@messages("users.login.inside_title")</h1>
 
-            @utils.input(userForm("email"), 'label -> "users.login.email", 'type -> "email")
-            @utils.input(userForm("password"), 'label -> "users.login.password", 'type -> "password")
+            @if(userForm.hasGlobalErrors) {
+                <div class="alert alert-danger" role="alert">
+                @userForm.globalErrors.map(_.format).mkString("<br>")
+                </div>
+            }
+
+            @utils.input(userForm("email"), 'label -> "users.login.email", 'type -> "email", 'labelclass -> "sr-only")
+            @utils.input(userForm("password"), 'label -> "users.login.password", 'type -> "password", 'labelclass -> "sr-only")
             <button class="btn btn-lg btn-primary btn-block" type="submit">@messages("users.login.login_button")</button>
             <p class="mt-5 mb-3 text-muted"><a href="@routes.UsersController.signup()">@messages("users.login.register")</a> -
                 <a href="@routes.UsersController.passwordReset()">@messages("users.login.password_reset")</a> </p>
