--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -47,7 +47,11 @@ body {
     border-bottom-left-radius: 0;
 }
 .form-signin input[type="password"] {
-    margin-bottom: 10px;
+    margin-top: -1px;
+
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+.form-signin button {
+    margin-top: 10px;
 }
