Choose datamatrix, add matrix on second page

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -37,8 +37,10 @@
         <p style="position: fixed;
             bottom: 0;
             left: 0;
-            word-wrap: break-spaces;">
-            <img src='data:image/png;base64,@bottomCode' style="float: right;"/>
+            word-wrap: break-spaces;
+
+            display: block;">
+            <img src='data:image/png;base64,@bottomCode' style="float: left; margin-right: 10px;"/>
 
             <strong>Watch out!</strong> Each ticket will be scanned by our staff and can be used only once. Don't buy this ticket to an unknown person.
             <br>
@@ -50,5 +52,17 @@
                 new java.text.SimpleDateFormat("dd/MM/yyyy 'at' HH:mm:ss z").format(new java.util.Date())
             }</small>
         </p>
+
+        <div style="page-break-before:always; text-align: center;">
+
+            <br>
+            <h2>Present this page on your phone</h2>
+            <h2>Présentez cette page sur votre mobile</h2>
+            <br>
+
+            <img src='data:image/png;base64,@bottomCode' width="450px"/>
+
+
+        </div>
     </body>
 </html>
