--- a/app/views/ticket.scala.html
+++ b/app/views/ticket.scala.html
@@ -1,6 +1,6 @@
-@(poster: String, event: data.Event, product: data.Product, codes: (String, String))
+@(poster: String, event: data.Event, product: data.Product, codes: (String, String), code : String)
 
-    @template(event, product.name, poster, codes._1, codes._2) {
+    @template(event, product.name, poster, codes._1, codes._2, code) {
 
         <h3>@product.name</h3>
 
