Allow products to be hidden (this way we can have special products, like generic 1 day tickets, etc)

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -57,8 +57,10 @@
             <h2>Présentez cette page sur votre mobile</h2>
             <br>
 
-            <img src='data:image/png;base64,@bottomCode' width="450px"/>
+            <img src='data:image/png;base64,@bottomCode' width="500px"/>
 
+            <br>
+            <h2><code>@code</code></h2>
 
         </div>
     </body>
