Allow a single productId to appear multiple times in a single order

--- a/app/views/orderTicket.scala.html
+++ b/app/views/orderTicket.scala.html
@@ -5,7 +5,7 @@
     <h3>Goodies Ticket</h3>
 
     <p>
-        Show this ticket at PolyJapan's stand to retrieve your goodies!  <strong>Watch out!</strong> This ticket doesn't give you an access to the convention.
+        Show this ticket at PolyJapan's booth to retrieve your goodies!  <strong>Watch out!</strong> This ticket doesn't give you an access to the convention.
         <br>Montrez ce billet au stand PolyJapan pour récupérer vos goodies ! <strong>Attention !</strong> Ce ticket ne vous donne pas accès au festival.
     </p>
 
