Add some information on how to reach the venue on the ticket

--- a/app/views/ticket.scala.html
+++ b/app/views/ticket.scala.html
@@ -6,7 +6,17 @@
 
     <p>@Html(product.longDescription.replaceAll("\n", "<br>"))</p>
 
-    <!-- Todo : remettre une section pour aider les visiteurs à venir -->
+    <h2>How to get there?</h2>
 
+    <p>
+        Public transportation: metro m1 or bus 705, stop EPFL
+        <br>By car, a few parkings are available on the campus
+    </p>
+
+    <h2>Comment venir ?</h2>
+    <p>
+        En transports publics: métro M1 ou bus 705, arrêt EPFL
+        <br>En voiture, plusieurs parkings sont disponibles sur le campus
+    </p>
 
 }
