--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -25,7 +25,7 @@
         <h2>@event.location</h2>
         <table>
             <tr>
-                <td><img src='@event.ticketsImage'/></td>
+                <td><img src='@event.ticketsImage.get'/></td>
                 <td><img src='data:image/png;base64,@topCode'/></td>
             </tr>
         </table>
