Produce correct invoice and send it by email when order is accepted

--- a/app/views/invoice.scala.html
+++ b/app/views/invoice.scala.html
@@ -36,7 +36,8 @@
         <ul style="display: inline-block;">
             <li>Tél. : +41 21 693 2095</li>
             <li>Fax. : +41 21 693 2097</li>
-            <li>Email : comite@@japan-impact.ch</li>
+            <li>Email : <a href="mailto:comite@@japan-impact.ch">comite@@japan-impact.ch</a></li>
+            <li>Web : <a href="https://www.japan-impact.ch">www.japan-impact.ch</a></li>
         </ul>
 
         <h2>@event.name - Facture #@order.id.get</h2>
