--- a/app/views/invoice.scala.html
+++ b/app/views/invoice.scala.html
@@ -22,6 +22,10 @@
                     list-style: none;
                     padding-left: 0;
                 }
+
+                td {
+                    padding: 5px;
+                }
         </style>
 
     </head>
@@ -51,12 +55,12 @@
 
         <table class="bordered">
             <tr>
-                <th style="width: 70%;">Nom produit</th>
-                <th style="width: 10%;">Numéro produit</th>
-                <th style="width: 10%;">Quantité</th>
-                <th style="width: 10%;">Prix TTC</th>
-                <th style="width: 10%;">TVA</th>
-                <th style="width: 10%;">Montant</th>
+                <th style="width: 50%;">Nom produit</th>
+                <th style="width: 7%;">ID produit</th>
+                <th>Quantité</th>
+                <th>Prix TTC</th>
+                <th>TVA</th>
+                <th>Montant</th>
             </tr>
 
             @for((p, ops) <- products; op <- ops) {
