--- a/app/views/documents/ticket.scala.html
+++ b/app/views/documents/ticket.scala.html
@@ -1,3 +1,4 @@
+@import views.html.documents.template
 @(event: data.Event, product: data.Product, codes: (String, String, String), code: String)
 
 @template(event, product.name, codes._1, codes._2, codes._3, code) {
